--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "formik": "^2.4.5",
+    "google-react-maps": "^1.5.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-simple-maps": "^3.0.0",
+    "web-vitals": "^2.1.0",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
